configuring tests compiler to use endorsed jars